# mujoco_ros2_control-release

./: .dockerignore  0001-Override-default-FETCHCONTENT_FULLY_DISCONNECTED-fla.patch  CHANGELOG.rst  CMakeLists.txt  README.md  codecov.yml  debian.store  docker-compose.yml  humble.ignored  package.xml  patches.conf  pixi.toml  releaser_history.json  rpm.store  tracks.yaml
.github/: markdown-link-check.json
.github/workflows/: ci.yaml  coverage.yml  format.yml  pre-release.yml
config/: controllers.yaml  mujoco_pid.yaml  mujoco_ros2_control_plugins.yaml
debian/: changelog  control  copyright  gbp.conf  rules
demo_resources/mjcf_generation/: test_inputs.xml
demo_resources/pid_control/: test_robot_pid.xml
demo_resources/robot/: test_robot.urdf
demo_resources/scenes/: scene.xml
docker/: Dockerfile  Dockerfile.pixi
docs/: DEVELOPMENT.md  TOOLS.md
include/mujoco_ros2_control/: mujoco_cameras.hpp  mujoco_lidar.hpp  mujoco_system_interface.hpp
include/mujoco_ros2_control_plugins/: heartbeat_publisher_plugin.hpp  mujoco_ros2_control_plugins_base.hpp
launch/: 01_basic_robot.launch.py  04_transmissions.launch.py
mujoco_ros2_control/: CHANGELOG.rst  CMakeLists.txt  __init__.py  urdf_to_mujoco_utils.py
mujoco_ros2_control/cmake/: DownloadMujoco.cmake
mujoco_ros2_control/include/mujoco_ros2_control/: data.hpp  mujoco_system_interface.hpp
mujoco_ros2_control/scripts/: find_missing_inertias.py  make_mjcf_from_robot_description.py
mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_lidar.cpp  mujoco_ros2_control_node.cpp
mujoco_ros2_control/test/: CMakeLists.txt
mujoco_ros2_control_demos/: CHANGELOG.rst  package.xml
mujoco_ros2_control_demos/config/: controllers.yaml
mujoco_ros2_control_demos/demo_resources/: test_robot.urdf
mujoco_ros2_control_demos/demo_resources/robot/: test_robot.xml
mujoco_ros2_control_demos/demo_resources/scenes/: scene_pid.xml
mujoco_ros2_control_demos/launch/: 01_basic_robot.launch.py  02_mjcf_generation.launch.py  03_pid_control.launch.py  demo.launch.py
mujoco_ros2_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mujoco_ros2_control_msgs/srv/: ResetWorld.srv
mujoco_ros2_control_plugins/: mujoco_ros2_control_plugins.xml
mujoco_ros2_control_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
mujoco_ros2_control_tests/launch/: test_launch.py
mujoco_ros2_control_tests/test/: robot_launch_test.py
rpm/: ros-humble-mujoco-ros2-control-demos.spec  ros-humble-mujoco-ros2-control-msgs.spec  ros-humble-mujoco-ros2-control-plugins.spec  ros-humble-mujoco-ros2-control.spec  ros-jazzy-mujoco-ros2-control-demos.spec  ros-jazzy-mujoco-ros2-control-msgs.spec  ros-jazzy-mujoco-ros2-control.spec  ros-kilted-mujoco-ros2-control-msgs.spec  ros-kilted-mujoco-ros2-control.spec  ros-rolling-mujoco-ros2-control-demos.spec  ros-rolling-mujoco-ros2-control-msgs.spec  ros-rolling-mujoco-ros2-control-plugins.spec  ros-rolling-mujoco-ros2-control.spec  template.spec
scripts/: make_mjcf_from_robot_description.py
src/: heartbeat_publisher_plugin.cpp  mujoco_system_interface.cpp
test/: test_headless_init.cpp
tests/: CMakeLists.txt  test_urdf_to_mujoco_utils.py
