<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_ros2_control</name>
  <version>0.0.1</version>
  <description>ros2_control wrapper for the MuJoCo Simulate application</description>
  <maintainer email="nathan.b.dunkelberger@nasa.gov">Nathan Dunkelberger</maintainer>
  <maintainer email="erik.holum@nasa.gov">Erik Holum</maintainer>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>libglfw3-dev</depend>
  <!-- mujoco_vendor is optional - MuJoCo can also be provided via MUJOCO_INSTALL_DIR env or auto-download -->
  <depend>mujoco_vendor</depend>
  <depend>pluginlib</depend>
  <depend>python3-pykdl</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mujoco_ros2_control_msgs</depend>
  <depend>transmission_interface</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>python3-venv</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
